更新build.gradle和gradle.properties文件，调整cloth-config版本为18.0.145，并将mod版本标记为1.0.0-beta；同时修改fabric.mod.json中的描述、作者信息和联系方式，更新许可证为MIT。

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,11 +10,11 @@ loader_version=0.16.14
 loom_version=1.10-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.0.0-beta
 maven_group=com.cedarxuesong.translate_allinone
-archives_base_name=Translate All in One
+archives_base_name=translate-all-in-one
 
 # Dependencies
 fabric_version=0.128.1+1.21.5
 modmenu_version=11.0.0-beta.1
-cloth_config_version=17.0.122
+cloth_config_version=18.0.145
