更新gradle.properties和gradle-wrapper.properties，提升依赖版本至1.2.1-beta和8.14.3，同时修正fabric.mod.json中的作者名称和联系信息，调整环境设置为Client，确保与最新版本兼容。

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,14 +7,14 @@ org.gradle.parallel=true
 minecraft_version=1.21.5
 yarn_mappings=1.21.5+build.1
 loader_version=0.16.14
-loom_version=1.10-SNAPSHOT
+loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.1.5-beta
+mod_version=1.2.1-beta
 maven_group=com.cedarxuesong.translate_allinone
 archives_base_name=translate-all-in-one
 
 # Dependencies
 fabric_version=0.128.1+1.21.5
-modmenu_version=11.0.0-beta.1
+modmenu_version=14.0.0-rc.2
 cloth_config_version=18.0.145
