更新archives_base_name名称

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ loom_version=1.11-SNAPSHOT
 # Mod Properties
 mod_version=1.2.1-beta
 maven_group=com.cedarxuesong.translate_allinone
-archives_base_name=translate-all-in-one
+archives_base_name=translate-all-in-one-1.21.4
 
 # Dependencies
 fabric_version=0.119.3+1.21.4
