--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx8G
-org.gradle.parallel=true
+org.gradle.parallel=truec
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.14
-loom_version=1.11-SNAPSHOT
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.3
+loader_version=0.18.1
+loom_version=1.14.10
 
 # Mod Properties
 mod_version=1.2.1-beta
@@ -15,6 +15,6 @@ maven_group=com.cedarxuesong.translate_allinone
 archives_base_name=translate-all-in-one
 
 # Dependencies
-fabric_version=0.128.1+1.21.5
-modmenu_version=14.0.0-rc.2
-cloth_config_version=18.0.145
+fabric_version=0.138.4+1.21.10
+modmenu_version=16.0.0
+cloth_config_version=20.0.149
