feat: 完成 OpenAI Responses API 接入并全面优化翻译与配置体验 - 完整接入 OpenAI Responses API（非流式 + 流式 SSE），新增事件解析与文本提取逻辑，并保留 structured output 回退与错误处理 - 在 LLM 层按 providerType 自动路由 OPENAI_COMPAT(/chat/completions) 与 OPENAI_RESPONSE(/responses) - 新增 OpenAIResponsesRequest 请求模型，支持从现有 messages 映射到 responses input，并兼容 text.format 与自定义参数 - 修复聊天输出自动翻译竞态：自动触发延迟投递、聊天行匹配增强（引用/内容双匹配）与重试机制，解决 “Could not find chat line to update” 报错 - 优化 missing key 显示：物品 tooltip 不再逐行报错，改为底部 Translating 状态；动画支持灰白到红色波浪渐变并在重提后回退；计分板同步同动画 - 调整失败重试优先级：重试任务入队头（最高优先级），普通任务入队尾，提升恢复速度 - 修复计分板纹理签名异常链路：避免触发 scoreboardEntry.name() 相关校验路径，改为安全文本映射策略 - 升级配置 UI 顶栏流程：完成=保存并关闭；新增取消（回滚快照）与红色重置（确认后重置） - 将重置确认改为配置页内同风格弹窗（非原版 ConfirmScreen），并接入 ESC/点外部关闭优先级 - 为 Chat Output/Chat Input/Item/Scoreboard 新增独立目标语言输入框，并补充中英文文案键

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.18.1
 loom_version=1.14.10
 
 # Mod Properties
-mod_version=1.2.1-beta
+mod_version=2.0
 maven_group=com.cedarxuesong.translate_allinone
 archives_base_name=translate-all-in-one
 
